--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10086,6 +10086,9 @@
     <Content Include="Areas\Inventario\Views\AjusteFisicoInventario\Anular.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_018.cshtml" />
     <Content Include="Areas\Banco\Views\ArchivoBancario\Contabilizar.cshtml" />
+    <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_det.cshtml" />
+    <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_Asignar.cshtml" />
+    <Content Include="Areas\Banco\Views\ArchivoBancario\_CmbFlujo_Tipo.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
