--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10095,6 +10095,7 @@
     <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_det.cshtml" />
     <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_Asignar.cshtml" />
     <Content Include="Areas\Banco\Views\ArchivoBancario\_CmbFlujo_Tipo.cshtml" />
+    <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\HorasExtras\Index.cshtml" />
@@ -10182,7 +10183,6 @@
     <Folder Include="Content\imagenes\empleados\" />
     <Folder Include="Content\imagenes\productos\" />
     <Folder Include="Content\videos\" />
-    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -10213,7 +10213,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
