--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Reportes\Banco\BAN_009_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_010_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_011_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_012_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ValesNoConciliados_Bus.cs" />
