--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1272,6 +1272,7 @@
     <Compile Include="Reportes\Banco\BAN_009_Data.cs" />
     <Compile Include="Reportes\Banco\BAN_010_Data.cs" />
     <Compile Include="Reportes\Banco\BAN_011_Data.cs" />
+    <Compile Include="Reportes\Banco\BAN_012_Data.cs" />
     <Compile Include="Reportes\Caja\CAJ_001_Data.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Data.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Data.cs" />
@@ -1742,6 +1743,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPBAN_011_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SPBAN_012_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPCONTA_002_Result.cs">
