--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -647,6 +647,12 @@
     <Compile Include="Reportes\Banco\BAN_011_Rpt.Designer.cs">
       <DependentUpon>BAN_011_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_012_cta_bancaria.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_012_cta_bancaria.Designer.cs">
+      <DependentUpon>BAN_012_cta_bancaria.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Banco\BAN_012_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10101,6 +10107,7 @@
     <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_det.cshtml" />
     <Content Include="Areas\Banco\Views\ArchivoBancario\_GridViewPartial_flujo_Asignar.cshtml" />
     <Content Include="Areas\Banco\Views\ArchivoBancario\_CmbFlujo_Tipo.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_012.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10219,6 +10226,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -10290,6 +10298,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_011_Rpt.resx">
       <DependentUpon>BAN_011_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_012_cta_bancaria.resx">
+      <DependentUpon>BAN_012_cta_bancaria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_012_Rpt.resx">
       <DependentUpon>BAN_012_Rpt.cs</DependentUpon>
