--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -398,6 +398,7 @@
     <Compile Include="Reportes\Facturacion\FAC_016_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_017_Info.cs" />
     <Compile Include="Reportes\Facturacion\FAC_018_Info.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_019_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_gastos_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Info.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Info.cs" />
