--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -303,6 +303,7 @@
     <Compile Include="Contabilidad\ct_plancta_Data.cs" />
     <Compile Include="Contabilidad\ct_plancta_nivel_Data.cs" />
     <Compile Include="Contabilidad\ct_punto_cargo_Data.cs" />
+    <Compile Include="Contabilidad\ct_punto_cargo_grupo_Data.cs" />
     <Compile Include="Contabilidad\ct_RevisionContable_Data.cs" />
     <Compile Include="cp_codigo_SRI.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
