--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Contabilidad\ct_periodo_Info.cs" />
     <Compile Include="Contabilidad\ct_plancta_Info.cs" />
     <Compile Include="Contabilidad\ct_plancta_nivel_Info.cs" />
+    <Compile Include="Contabilidad\ct_punto_cargo_grupo_Info.cs" />
     <Compile Include="Contabilidad\ct_punto_cargo_Info.cs" />
     <Compile Include="Contabilidad\ct_RevisionContable_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_CatalogoTipo_Info.cs" />
