--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -312,7 +312,7 @@
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
     <Compile Include="cp_conciliacion_Caja_det.cs">
-      <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
+      <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
     <Compile Include="cp_conciliacion_Caja_det_Ing_Caja.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
@@ -2096,7 +2096,10 @@
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
     <Compile Include="vwcp_conciliacion_Caja_det.cs">
-      <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
+      <DependentUpon>Model_caja.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwcp_Conciliacion_Caja_det1.cs">
+      <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
     <Compile Include="vwcp_conciliacion_Caja_det_x_ValeCaja.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
