--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_det_Bus.cs" />
+    <Compile Include="Contabilidad\ct_cbtecble_Plantilla_Bus.cs" />
+    <Compile Include="Contabilidad\ct_cbtecble_Plantilla_det_Bus.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_tipo_Bus.cs" />
     <Compile Include="Contabilidad\ct_CentroCostoNivel_Bus.cs" />
     <Compile Include="Contabilidad\ct_CentroCosto_Bus.cs" />
