--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -387,6 +387,7 @@
     <Compile Include="Areas\Importacion\Controllers\RecepcionOrdenCompraController.cs" />
     <Compile Include="Areas\Importacion\ImportacionAreaRegistration.cs" />
     <Compile Include="Areas\Inventario\Controllers\AjusteFisicoInventarioController.cs" />
+    <Compile Include="Areas\Inventario\Controllers\AprobacionDespachoController.cs" />
     <Compile Include="Areas\Inventario\Controllers\AprobacionMovimientoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\AuditoriaInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoInventarioController.cs" />
@@ -10155,6 +10156,8 @@
     <Content Include="Areas\Contabilidad\Views\PlantillaComprobanteContable\Anular.cshtml" />
     <Content Include="Areas\Inventario\Views\AprobacionMovimientoInventario\_GridViewPartial_movimiento_inventario_x_aprobar.cshtml" />
     <Content Include="Areas\Inventario\Views\AprobacionMovimientoInventario\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\AprobacionDespacho\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\AprobacionDespacho\_GridViewPartial_aprobacion_despacho.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
