--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -405,6 +405,7 @@
     <Compile Include="Areas\Inventario\Controllers\PresentacionController.cs" />
     <Compile Include="Areas\Inventario\Controllers\ProductoController.cs" />
     <Compile Include="Areas\Inventario\Controllers\ProductoTipoController.cs" />
+    <Compile Include="Areas\Inventario\Controllers\ReversoMovimientoInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\RevisionController.cs" />
     <Compile Include="Areas\Inventario\Controllers\SubgrupoController.cs" />
     <Compile Include="Areas\Inventario\Controllers\TipoMovimientoController.cs" />
@@ -10155,6 +10156,8 @@
     <Content Include="Areas\Contabilidad\Views\PlantillaComprobanteContable\Anular.cshtml" />
     <Content Include="Areas\Inventario\Views\AprobacionMovimientoInventario\_GridViewPartial_movimiento_inventario_x_aprobar.cshtml" />
     <Content Include="Areas\Inventario\Views\AprobacionMovimientoInventario\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\ReversoMovimientoInventario\_GridViewPartial_movimiento_inventario_x_reversar.cshtml" />
+    <Content Include="Areas\Inventario\Views\ReversoMovimientoInventario\Index.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
