--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -731,9 +731,17 @@
     <Compile Include="Reportes\Contabilidad\CONTA_005_Rpt.Designer.cs">
       <DependentUpon>CONTA_005_Rpt.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\Contabilidad\CONTA_006_Rpt.cs" />
-    <Compile Include="Reportes\Contabilidad\CONTA_006_Rpt.Designer.cs">
-      <DependentUpon>CONTA_006_Rpt.cs</DependentUpon>
+    <Compile Include="Reportes\Contabilidad\CONTA_006_BG_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_006_BG_Rpt.Designer.cs">
+      <DependentUpon>CONTA_006_BG_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_006_ER_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_006_ER_Rpt.Designer.cs">
+      <DependentUpon>CONTA_006_ER_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.cs">
       <SubType>Component</SubType>
@@ -10395,6 +10403,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_005_Rpt.resx">
       <DependentUpon>CONTA_005_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_006_BG_Rpt.resx">
+      <DependentUpon>CONTA_006_BG_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_006_ER_Rpt.resx">
+      <DependentUpon>CONTA_006_ER_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.resx">
       <DependentUpon>CXC_001_diario_Rpt.cs</DependentUpon>
