--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -558,6 +558,7 @@
     <Compile Include="Facturacion\fa_guia_remision_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_Data.cs" />
     <Compile Include="Facturacion\fa_guia_remision_det_x_factura_Data.cs" />
+    <Compile Include="Facturacion\fa_MotivoTraslado_Data.cs" />
     <Compile Include="Facturacion\fa_NivelDescuento_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Data.cs" />
@@ -2337,6 +2338,9 @@
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_notaCreDeb.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="vwfa_notaCreDeb1.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
     <Compile Include="vwfa_notaCreDeb_det.cs">
