--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10147,6 +10147,9 @@
     <Content Include="Areas\Inventario\Views\AprobacionDespacho\Index.cshtml" />
     <Content Include="Areas\Inventario\Views\AprobacionDespacho\_GridViewPartial_aprobacion_despacho.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_CmbProducto_Guia.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\ClaseProveedor\_CmbCtaCbleCXP_Proveedor.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\ClaseProveedor\_CmbCtaCbleGasto_Proveedor.cshtml" />
+    <Content Include="Areas\CuentasPorPagar\Views\ClaseProveedor\_CmbCtaCbleAnticipo_Proveedor.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
