--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -241,6 +241,7 @@
     <Compile Include="General\tb_comprobantes_sin_autorizacion_Info.cs" />
     <Compile Include="General\tb_empresa_Info.cs" />
     <Compile Include="General\tb_FiltroReportes_Info.cs" />
+    <Compile Include="General\tb_LogError_Info.cs" />
     <Compile Include="General\tb_mes_Info.cs" />
     <Compile Include="General\tb_modulo_Info.cs" />
     <Compile Include="General\tb_moneda_Info.cs" />
