--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2089,7 +2089,7 @@
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
     <Compile Include="vwcp_conciliacion_Caja_det.cs">
-      <DependentUpon>Model_caja.tt</DependentUpon>
+      <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
     <Compile Include="vwcp_Conciliacion_Caja_det1.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
